<resources>

    <!-- app -->
    <string name="app_name">Minima</string>
    <string name="app_version">Minima v$version</string>
    <string name="title_course_list">Course</string>
    <string name="title_timetable_list">Timetable</string>
    <string name="title_timetable_table">Timetable</string>
    <string name="title_setting">Settings</string>
    <string name="title_info">Info</string>
    <string name="title_share_table">Share</string>
    <string name="splash_screen">Splash screen</string>

    <!-- course -->
    <string name="course_add">Add course</string>
    <string name="course_dialog_course_code">Course code</string>
    <string name="course_dialog_course_code_hint">e.g. EEE610</string>
    <string name="course_dialog_group_code">Group code</string>
    <string name="course_dialog_group_code_hint">e.g. EE241C7A</string>
    <string name="course_dialog_course_name">Course name</string>
    <string name="course_dialog_course_name_hint">e.g. Engineers in society</string>
    <string name="course_dialog_venue">Venue</string>
    <string name="course_dialog_venue_hint">e.g. Dewan Kuliah C, FKE</string>

    <!-- common -->
    <string name="save">Save</string>
    <string name="not_available">n/a</string>
    <string name="refresh">Refresh</string>
    <string name="widget_refresh">Refreshing</string>
    <string name="success">Success</string>
    <string name="invalid_course_info">Invalid course information</string>
    <string name="invalid_course_name">Invalid course name</string>
    <string name="invalid_venue">Invalid venue</string>
    <string name="failed_recheck_timetable">Failed to recheck timetable</string>
    <string name="failed_get_faculty_info">Failed to get faculty information</string>
    <string name="failed_get_timetable_info">Failed to get timetable information</string>

    <!-- dialog -->
    <string name="dialog_delete_course_code_title">Are you sure to delete $courseCode?</string>
    <string name="dialog_delete_course_code_message">This operation is irreversible.</string>
    <string name="dialog_clear_data_title">Are you sure to clear data?</string>
    <string name="dialog_clear_data_message">This operation is irreversible.</string>
    <string name="dialog_overlap_timetable_title">Overlapped timetable detected</string>
    <string name="dialog_overlap_timetable_message">Please check your course list and timetable. Due to overlapping timetable, timetable table could not be generated.</string>
    <string name="dialog_info_course_list">
        Press \"Add course\" button to add courses. Fill in the course code and course group and press \"Add course\" button to add.
        \n\nThe input text is case insensitive, it can work with lowercase as well. If failed, please check your input or check iCress web availability. Sometime, iCress page hangs and cause Minima fail to get course information.
        \n\nLong press on the timetable item to edit course name and swipe item to the left or right to delete the course. It will automatically delete related timetable too.
        \n\nMinima will automatically find the faculty and you might need to check your course list. Sometimes, same course code and course group can exist in other faculty as well. Remove anything that is unrelated.
    </string>
    <string name="dialog_info_timetable_list">
        Timetable list depends on courses that you\'ve added. Please add your course in \"Course\" section.
        \n\nLong click on timetable item to change the class venue. Click on \"Recheck timetable online\" button to recheck your registered course on iCress.
        \n\nYour course name will be preserved, but class venue will be replaced with the value returned by the iCress. This is due to course name is not part of iCress, but class venue is.
    </string>
    <string name="dialog_info_timetable_table">
        You can swipe up and down the timetable table view.
        \n\nThe previous timetable table view is old and unmaintainable. With this version, timetable table view is upgraded into more simpler and maintainable implementation.
        \n\nTo generate the timetable table view, you need to ensure that your timetable is not overlapping. You can fix overlapping timetable by deleting conflicting course. If it\'s out of your capability to fix the conflicting course, please use timetable list view instead.
        \n\nTo share the timetable view as image, click on the share icon on the application bar (top right of the screen).
    </string>
    <string name="dialog_info_settings">
        Dear all,
        \n\nMinima developer always considers your feedback from time to time. Currently, Minima developer is not UiTM student anymore (but once did) and the developer could not give his full commitment. Sorry.
        \n\nThis application will always be free (without ads!) and be unofficial so that Minima is free to try out new things.
        \n\nFeel free to give feedback, contribute or donate. Share the app to your friends, coursemate and etc.
        \n\nWishing you the best of luck on your studies. Thank you for using Minima.
    </string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_dismiss">Dismiss</string>

    <!-- email -->
    <string name="email_intent_title">Send feedback via:</string>
    <string name="email_subject">[Minima] Hi! I\'ve my feedback for you</string>
    <string name="email_text">
        Title: Short brief of your feedback.
        \n\nDescription: Your full feedback.
        \n\nSteps to reproduce (for report issue only): Clearly and chronologically (numbered list is recommended)
        \n\nExpectation (for report issue only): Explain how would you think it should behave / work.
        \n\nPlatform info (for report issue only): Device full model (e.g. Google Pixel 4, Huawei Honor 8x, etc.).
    </string>

    <!-- shortcut -->
    <string name="shortcut_icress_short">iCress</string>
    <string name="shortcut_icress_long">Open iCress in browser</string>
    <string name="shortcut_student_portal_short"> iStudent</string>
    <string name="shortcut_student_portal_long">Open iStudent portal in browser</string>

    <!-- timetable -->
    <string name="uni_start_time">08:00 am</string>
    <string name="timetable_recheck">Recheck timetable online</string>
    <string name="timetable_sticker_formatting">%1$s\n%2$s\n%3$s</string>
    <string name="timetable_banner_text">Generated by Minima v$version</string>
    <string name="timetable_meridian_ante">%1$d am</string>
    <string name="timetable_meridian_post">%1$d pm</string>
    <string-array name="timetable_header_title">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="timetable_weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
