<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_dialog_course_code"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="1dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_dialog_course_code_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="1dp"
        tools:targetApi="o" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_dialog_group_code"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="1dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_dialog_group_code_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="1dp"
        tools:targetApi="o" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_add"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>